...
                    PlacesLinkView(location: location)
                }
            }
            .listStyle(PlainListStyle())
            .accessibilityLabel("Places, List")
            Button("Open Custom Place", action: viewModel.addCustomPlace)
                .accessibilityIdentifier("customPlaceButton")
                .buttonStyle(BorderedProminentButtonStyle())
                .padding()
            Spacer()
        }
    }
}
...
